<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bleScanFragment"
        android:icon="@drawable/link_24px"
        android:title="@string/title_connect" />
    <item
        android:id="@+id/controlFragment"
        android:icon="@drawable/tune_24px"
        android:title="@string/title_control" />
    <item
        android:id="@+id/peqFragment"
        android:icon="@drawable/vital_signs_24px"
        android:title="@string/title_peq" />
    <item
        android:id="@+id/otherFragment"
        android:icon="@drawable/pending_24px"
        android:title="@string/title_others" />
    <item
        android:id="@+id/otherRoomCollection"
        android:icon="@drawable/voicemail_24px"
        android:title="@string/title_calibration" />
</menu>